[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Monsters/Monster_1/2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Monsters/Monster_1/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Monsters/Monster_1/3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Monsters/Monster_1/4.png" type="Texture" id=4]
[ext_resource path="res://Health_Bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy_1.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.7153
height = 17.6315

[sub_resource type="CircleShape2D" id=3]
radius = 103.155

[node name="Enemy_1" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.340576, -1.61188 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Health_Bar" parent="." instance=ExtResource( 5 )]
margin_left = -32.5033
margin_top = -30.7002
margin_right = 32.4967
margin_bottom = -23.7002

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 9.54015, 4.14205, 93.9725, 218.243, -89.9987, 218.381, -10.5559, 3.88558 )
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
